objects/Technical_Campaign__c.object
<CustomObject>
    <fields>
        <fullName>BU_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BU Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Technical_Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <label>Campaign Type</label>
        <picklist>
            <picklistValues>
                <fullName>Competitive Displacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grow: New Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grow: Proliferation</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EMT_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EMT Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Technical_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>High_Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>High Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Region__c</fullName>
        <formula>TEXT(Owner:User.Region__c)</formula>
        <label>Owner Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Parent Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Parent Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Technical Campaigns</relationshipLabel>
        <relationshipName>Technical_Campaigns</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Release_Stream__c</fullName>
        <label>Release Stream</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TC_ID__c</fullName>
        <displayFormat>TC-{000000}</displayFormat>
        <label>TC ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>TC_Name_Suffix__c</fullName>
        <label>TC Name Suffix</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Technical Campaign</label>
    <listViews>
        <fullName>All_Active_TCs</fullName>
        <columns>NAME</columns>
        <columns>Campaign_Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Active TCs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Active_TCs</fullName>
        <columns>NAME</columns>
        <columns>Campaign_Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>My Active TCs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Technical Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Technical Campaigns</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>